[FIX] Compilando e funcional no Windows. [ADD] Barras de Progressos, Geração do RCC [TEMP] Removida TagLib temporariamente [BUG] Não está exibindo albuns no conteúdo dos cards

--- a/resources.qrc
+++ b/resources.qrc
@@ -62,5 +62,97 @@
         <file>images/backgrounds/plexus.jpg</file>
         <file>images/album.jpg</file>
         <file>images/ui/add.png</file>
+        <file>qml/ConfigInfo.qml</file>
+        <file>qml/Loading.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/utils.js</file>
+        <file>qml/ViewEmpty.qml</file>
+        <file>qml/settings/application/General.qml</file>
+        <file>qml/settings/application/Hardware.qml</file>
+        <file>qml/settings/application/Input.qml</file>
+        <file>qml/settings/application/Visual.qml</file>
+        <file>qml/settings/App.qml</file>
+        <file>qml/settings/Catalogs.qml</file>
+        <file>qml/settings/Login.qml</file>
+        <file>qml/settings/MainView.qml</file>
+        <file>qml/effects/Effect.qml</file>
+        <file>qml/effects/EffectBillboard.qml</file>
+        <file>qml/effects/EffectBlackAndWhite.qml</file>
+        <file>qml/effects/EffectEmboss.qml</file>
+        <file>qml/effects/EffectGaussianBlur.qml</file>
+        <file>qml/effects/EffectGlow.qml</file>
+        <file>qml/effects/EffectIsolate.qml</file>
+        <file>qml/effects/EffectMagnify.qml</file>
+        <file>qml/effects/EffectPageCurl.qml</file>
+        <file>qml/effects/EffectPassThrough.qml</file>
+        <file>qml/effects/EffectPixelate.qml</file>
+        <file>qml/effects/EffectPosterize.qml</file>
+        <file>qml/effects/EffectRipple.qml</file>
+        <file>qml/effects/EffectSelectionPanel.qml</file>
+        <file>qml/effects/EffectSepia.qml</file>
+        <file>qml/effects/EffectSharpen.qml</file>
+        <file>qml/effects/EffectShockwave.qml</file>
+        <file>qml/effects/EffectSobelEdgeDetection1.qml</file>
+        <file>qml/effects/EffectSobelEdgeDetection2.qml</file>
+        <file>qml/effects/EffectTiltShift.qml</file>
+        <file>qml/effects/EffectToon.qml</file>
+        <file>qml/effects/EffectVignette.qml</file>
+        <file>qml/effects/EffectWarhol.qml</file>
+        <file>qml/effects/EffectWobble.qml</file>
+        <file>qml/effects/gaussianblur_h.fsh</file>
+        <file>qml/effects/gaussianblur_v.fsh</file>
+        <file>qml/components/AsyncImage.qml</file>
+        <file>qml/components/Button.qml</file>
+        <file>qml/components/Card.qml</file>
+        <file>qml/components/Checkbox.qml</file>
+        <file>qml/components/Dialog.qml</file>
+        <file>qml/components/Dialog2.qml</file>
+        <file>qml/components/DynamicBackground.qml</file>
+        <file>qml/components/EditableText.qml</file>
+        <file>qml/components/EditField.qml</file>
+        <file>qml/components/fileBrowser.qml</file>
+        <file>qml/components/ListItem.qml</file>
+        <file>qml/components/ListSeparator.qml</file>
+        <file>qml/components/ListSettings.qml</file>
+        <file>qml/components/MenuToolbar.qml</file>
+        <file>qml/components/Panel.qml</file>
+        <file>qml/components/ScrollBar.qml</file>
+        <file>qml/components/ScrollBar2.qml</file>
+        <file>qml/components/ShadowText.qml</file>
+        <file>qml/components/SpecialText.qml</file>
+        <file>qml/components/Switch.qml</file>
+        <file>qml/components/dynamicBackground/A704.qml</file>
+        <file>qml/components/dynamicBackground/ALotOfSpheres.qml</file>
+        <file>qml/components/dynamicBackground/Blobs.qml</file>
+        <file>qml/components/dynamicBackground/Bubbles.qml</file>
+        <file>qml/components/dynamicBackground/CirclePattern.qml</file>
+        <file>qml/components/dynamicBackground/DataTransfer.qml</file>
+        <file>qml/components/dynamicBackground/FlappingWings.qml</file>
+        <file>qml/components/dynamicBackground/Heart.qml</file>
+        <file>qml/components/dynamicBackground/HotShower.qml</file>
+        <file>qml/components/dynamicBackground/Industry.qml</file>
+        <file>qml/components/dynamicBackground/IO.qml</file>
+        <file>qml/components/dynamicBackground/LoadingOrb.qml</file>
+        <file>qml/components/dynamicBackground/NyanCat.qml</file>
+        <file>qml/components/dynamicBackground/Pangram.qml</file>
+        <file>qml/components/dynamicBackground/Shader.qml</file>
+        <file>qml/components/dynamicBackground/Simplicity.qml</file>
+        <file>qml/components/dynamicBackground/SoundSinusWave.qml</file>
+        <file>qml/components/dynamicBackground/SpaceEye.qml</file>
+        <file>qml/components/dynamicBackground/TalisTraps.qml</file>
+        <file>qml/components/dynamicBackground/TruchetTentacles.qml</file>
+        <file>qml/components/dynamicBackground/Tunnel1.qml</file>
+        <file>qml/components/dynamicBackground/Waves.qml</file>
+        <file>qml/albumbuilder/AlbumItem.qml</file>
+        <file>qml/albumbuilder/AllArtistItem.qml</file>
+        <file>qml/albumbuilder/FanartSelector.qml</file>
+        <file>qml/albumbuilder/MainView.qml</file>
+        <file>qml/albumbuilder/MenuArtists.qml</file>
+        <file>qml/albumbuilder/ViewArtist.qml</file>
+        <file>qml/albumbuilder/allartists/AllArtists.qml</file>
+        <file>qml/albumbuilder/allartists/Details.qml</file>
+        <file>qml/albumbuilder/viewartist/PageAlbum.qml</file>
+        <file>qml/albumbuilder/viewartist/PageArtist.qml</file>
+        <file>qml/components/ProgressDialog.qml</file>
     </qresource>
 </RCC>
